--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <h1 class="text-[#013223] font-bold text-2xl">Emergency <br> service</h1>
         </div>
         <div class="flex justify-center gap-5">
-            <p  class="w-[120px] h-[50px] bg-[#41ff6b1a] rounded-3xl text-center px-8 py-4"><span id="heart-count">0</span>❤️</p>
+            <p class="w-[120px] h-[50px] bg-[#41ff6b1a] rounded-3xl text-center px-8 py-4"><span
+                    id="heart-count">0</span>❤️</p>
             <p class="w-[120px] h-[50px] bg-[#41ff6b1a] rounded-3xl text-center px-8 py-4"><span>100</span>🪙</p>
             <p class="w-[120px] h-[50px] bg-[#00a63e] rounded-3xl text-center  px-8 py-4"> <span>0</span>Copy</p>
         </div>
@@ -41,6 +42,88 @@
     <div class="bg-[#f5fff6]">
         <div class="card-container">
 
+            <div class="border-2 border-red-500 bg-white w-[430px] h-[360px] rounded-2xl p-8 ">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/Bangladesh-Railway.png" alt=""
+                        class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-md ">
+                    <button class="btn btn-circle" onclick="increaseHeart()">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5"
+                            stroke="currentColor" class="size-[1.2em]">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                        </svg>
+                    </button>
+                </div>
+
+                <div class=''>
+                    <h1 class="text-2xl font-bold mb-5">Bangladesh Railway Helpline </h1>
+                    <p class=" text-[20px] mb-5">Bangladesh Railway</p>
+                    <h1 class="text-3xl font-bold mb-5">163</h1>
+                    <p class="bg-[#f2f2f2] w-[61px] h-[40px] text-center rounded-2xl px-4 py-2 mb-5  ">Travel</p>
+                </div>
+
+                <div class=" flex justify-between items-center">
+                    <button class="btn w-[140px] h-[40px]"><i class="fa-solid fa-copy"></i>Copy</button>
+                    <button class="btn btn-success w-[140px] h-[40px]"><i class="fa-solid fa-phone"></i>Call</button>
+
+                </div>
+
+
+            </div>
+            <div class="border-2 border-red-500 bg-white w-[430px] h-[360px] rounded-2xl p-8 ">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/police.png" alt="" class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-md">
+                    <button class="btn btn-circle" onclick="increaseHeart()">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5"
+                            stroke="currentColor" class="size-[1.2em]">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                        </svg>
+                    </button>
+                </div>
+
+                <div class=''>
+                    <h1 class="text-2xl font-bold mb-5"> Anti-Corruption Helpline</h1>
+                    <p class=" text-[20px] mb-5">Anti-Corruption</p>
+                    <h1 class="text-3xl font-bold mb-5">163</h1>
+                    <p class="bg-[#f2f2f2] w-[61px] h-[40px] text-center rounded-2xl px-4 py-2 mb-5  ">Govt.</p>
+                </div>
+
+                <div class=" flex justify-between items-center">
+                    <button class="btn w-[140px] h-[40px]"><i class="fa-solid fa-copy"></i>Copy</button>
+                    <button class="btn btn-success w-[140px] h-[40px]"><i class="fa-solid fa-phone"></i>Call</button>
+
+                </div>
+
+
+            </div>
+            <div class="border-2 border-red-500 bg-white w-[430px] h-[360px] rounded-2xl p-8">
+                <div class="flex justify-between items-center">
+                    <img src="./assets/ambulance.png" alt="" class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-md">
+                    <button class="btn btn-circle" onclick="increaseHeart()">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5"
+                            stroke="currentColor" class="size-[1.2em]">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12Z" />
+                        </svg>
+                    </button>
+                </div>
+
+                <div class=''>
+                    <h1 class="text-2xl font-bold mb-5">Fire Service Number</h1>
+                    <p class=" text-[20px] mb-5">Fire Service</p>
+                    <h1 class="text-3xl font-bold mb-5">999</h1>
+                    <p class="bg-[#f2f2f2] w-[61px] h-[40px] text-center rounded-2xl px-4 py-2 mb-5  "> Fire</p>
+                </div>
+
+                <div class=" flex justify-between items-center">
+                    <button class="btn w-[140px] h-[40px]"><i class="fa-solid fa-copy"></i>Copy</button>
+                    <button class="btn btn-success w-[140px] h-[40px]"><i class="fa-solid fa-phone"></i>Call</button>
+
+                </div>
+
+
+            </div>
             <div class="border-2 border-red-500 bg-white w-[430px] h-[360px] rounded-2xl p-8 ">
                 <div class="flex justify-between items-center">
                     <img src="./assets/emergency.png" alt="" class="w-[60px] h-[60px] bg-[#ffe3e2] rounded-md ">
@@ -122,8 +205,21 @@
 
 
             </div>
-<!-- call history section-->
-            <div></div>
+            <!-- call history section-->
+            <div class="border-2 border-red-500 w-[400px] bg-[#ffffff]">
+                <div class=" flex justify-between items-center">
+                    <div>
+                        <h2><i class="fa-solid fa-clock"></i> Call history</h2>
+                    </div>
+                    <div>
+                        <button class="btn btn-active btn-success w-[140px] h-[40px] rounded-3xl"
+                            id="clear-button">Clear</button>
+                    </div>
+                </div>
+                <div>
+
+                </div>
+            </div>
         </div>
 
 
@@ -133,8 +229,9 @@
 
 
 
+    </div>
 
-   <script src="./script/emergency.js"></script>     
+    <script src="./script/emergency.js"></script>
 </body>
 
 </html>
